feat: download subtitle file (support => srt, txt, vtt)
